# scverif

./: .dockerignore  .gitignore  .merlin  LICENSE.txt  Makefile  README.md  README.org  _tags  default.nix  dependencies.org  documentation.md  dune-project  scverif.opam
.container/: Dockerfile
isa/: isa-cortex-m0plus-metrics.il  isa-cortex-m0plus.il  leakyisa-cortex-m0plus.il  pseudoisa.il
licenses/: SCR.txt
models/: isa-cortex-m0plus-metrics.il  isa-cortex-m0plus.il  leakyisa-cortex-m0plus.il  pseudoisa-clearings.il  pseudoisa-cortexmclearings.il  pseudoisa-metrics.il  pseudoisa.il
src/: MLTAst.ml  MLTLexer.mll  MLTParser.mly  asmast.ml  asmlexer.mll  asmlifter.ml  asmlifter.mli  asmmain.ml  asmparser.mly  bigint.ml  bigint.mli  bigintCore.ml  common.ml  dune  gaslexer.mll  gasparser.mly  glob_option.ml  il.ml  ilast.ml  ilcodeelim.ml  ileval.ml  ileval.mli  ilexport.ml  ilexport.mli  ilinline.ml  illeakage.ml  illexer.mll  ilmaskverif.ml  ilmaskverifoperators.ml  ilmaskverifrewrite.ml  ilparser.mly  iltaint.ml  iltyping.ml  iltyping.mli  lexer.mll  location.ml  location.mli  main.ml  mainast.ml  parser.mly  (+8 more)
test/: isa-cortex-m0plus.il  secmult-cortex-m0plus-O3.objdump  secmult_direct-cortex-m0plus-Os.objdump  secmult_flaw-cortex-m0plus-O3.objdump  secrefresh-cortex-m0plus-Os.objdump  secxor-loop.objdump  secxor.objdump
testasm/: secmult-cortex-m0plus-O3.il  secmult-cortex-m0plus-O3.objdump  secmult-cortex-m0plus-Os.il  secmult-cortex-m0plus-Os.objdump  secmult_direct-cortex-m0plus-O3.objdump  secmult_direct-cortex-m0plus-Os.objdump  secref-cortex-m0plus-O3.il  (+10 more)
(+27 files in other folders)
